--- a/styles/scss/abstracts/_variables.scss
+++ b/styles/scss/abstracts/_variables.scss
@@ -84,5 +84,5 @@ $vertical-content-height-main: calc(100vh - ($topbar-height + $navbar-height));
 $vertical-content-height: calc($vertical-content-height-main - $footer-height);
 
 // box shadows
-$shadow-light: 0 2rem 4rem rgba(0, 0, 0, .1);
+$shadow-light: 1px 0 2px 2px rgba(#000, 0.1);
 $shadow-dark: 0 2rem 4rem rgba(0, 0, 0, .2);
