--- a/styles/scss/components/_form.scss
+++ b/styles/scss/components/_form.scss
@@ -2,75 +2,71 @@
 @use "../abstracts/variables" as var;
 
 .form {
-  
+
   &--auth {
-    
+
     display: flex;
     flex-direction: column;
     align-items: start;
-    gap: var.$spacing-s;
-    
-    margin: var.$spacing-5xl;
+    gap: var.$spacing-m;
   }
-  
+
   &--signup {
     display: grid;
     grid-template-columns: [form-start] repeat(2, [col-start] max-content [col-start]) [form-end];
     grid-template-rows: repeat(4, [row-start] min-content);
     column-gap: var.$spacing-s;
     row-gap: var.$spacing-m;
-    
+
     justify-self: center;
     margin: var.$spacing-4xl 0;
-    
+
     &__email {
       grid-column: form;
       grid-row: row-start 1 / span 1;
     }
-    
+
     &__password, &__confirm-password {
       grid-row: row-start 2 / span 1;
     }
-    
-    &__password{
+
+    &__password {
       grid-column: col-start 1 / span 1;
     }
-    
+
     &__password-confirm {
       grid-column: col-start 2 / span 1;
     }
-    
+
     &__first-name, &__last-name {
       grid-row: row-start 3 / span 1;
     }
-    
+
     &__first-name {
       grid-column: col-start 1 / span 1;
     }
-    
+
     &__last-name {
       grid-column: col-start 2 / span 1;
     }
-    
+
     &__submit {
       grid-column: form;
       grid-row: row-start 4 / span 1;
     }
 
-    @include mxn.media(phone-sm)
-    {
+    @include mxn.media(phone-sm) {
       grid-template-columns: [form-start] repeat(2, [col-start] 1fr [col-start]) [form-end];
       justify-self: stretch;
     }
-    
-    @include mxn.media(phone-xs)
-    {
+
+    @include mxn.media(phone-xs) {
       display: flex;
       flex-direction: column;
       gap: var.$spacing-m;
     }
   }
-  
+
   &--admin {
     grid-column: col-start 3 /  span 8;
     display: flex;
@@ -83,13 +79,13 @@
     flex-direction: column;
     gap: var.$spacing-s;
   }
-  
+
   &__admin-group {
     display: grid;
-    
+
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-       column-gap: var.$spacing-xl;
-         row-gap: var.$spacing-l;
+    column-gap: var.$spacing-xl;
+    row-gap: var.$spacing-l;
   }
 
   &__label {
@@ -121,15 +117,19 @@
     &:focus {
       outline: none;
       //box-shadow: 0 1rem 2rem rgba(#000, .1);
-      border-color: var.$color-success;
-    }
+      border-color: var.$color-grey-dark-2;
 
-    &:focus:invalid {
-      border-color: var.$color-danger;
+      &:valid {
+        border-color: var.$color-success;
+      }
+
+      &:invalid {
+        border-color: var.$color-danger;
+      }
     }
   }
 
-  &__input:placeholder-shown + &__label--input {
+  &__input:placeholder-shown + &__label {
     opacity: 0;
     visibility: hidden;
     transform: translateY(-4rem);
@@ -157,28 +157,28 @@
       border-bottom: 3px solid var.$color-danger;
     }
   }
-  
+
   &__checkbox-group {
     display: flex;
     align-items: center;
     gap: var.$spacing-s;
   }
-  
-  
+
+
   &__checkbox {
-   /* width: 2rem;
-    height: 2rem;
-    appearance: none;
-    background-color: var.$color-grey-light-1;
-    border-radius: 2px;
-    cursor: pointer;
-    transition: all 300ms;
-    border: none;
-    outline: none;
-    
-    &:checked {
-      background-color: var.$color-primary-medium;
-    }*/
+    /* width: 2rem;
+     height: 2rem;
+     appearance: none;
+     background-color: var.$color-grey-light-1;
+     border-radius: 2px;
+     cursor: pointer;
+     transition: all 300ms;
+     border: none;
+     outline: none;
+     
+     &:checked {
+       background-color: var.$color-primary-medium;
+     }*/
   }
 
 }
