--- a/Server/src/Server.Web/wwwroot/css/dev/main.css
+++ b/Server/src/Server.Web/wwwroot/css/dev/main.css
@@ -36,7 +36,7 @@ html {
 
 body {
   background-color: #f6f9fc;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 body {
@@ -622,7 +622,7 @@ body {
   grid-template-rows: [navigation-start topbar-start] 8.5rem [topbar-end nav-start] 6.5rem [navigation-end nav-end content-start] 1fr [content-end];
   min-height: 100vh;
   width: 100vw;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 .layout--admin {
   grid-template-rows: [header-start] min-content [header-end content-start] 1fr [content-end];
@@ -649,6 +649,7 @@ body {
 }
 .layout__content-vertical--main {
   min-height: calc(100vh - 15rem);
+  overflow-y: auto;
 }
 .layout__content--p-default {
   padding: 6.4rem 0;
