Redesign home page hero section.

--- a/Server/src/Server.Components/HeroSections/HeroHome.razor
+++ b/Server/src/Server.Components/HeroSections/HeroHome.razor
@@ -1,11 +1,22 @@
 @namespace SunRaysMarket.Server.Components
 
 <div class="hero-home">
-    <img src="img/hero-bg.png" alt="" class="hero-home__img"/>
-    <div class="hero-home__grid">
-        <div class="hero-home__content">
-            <h3 class="hero-home__heading">Save up to 50% on produce this week</h3>
-            <NavLink href="#" class="btn btn--lg btn--primary btn--pill"> Shop Now </NavLink>
+    <div class="hero-home__layout">
+        <h3 class="hero-home__heading">Save up to 50% on produce this week</h3>
+        <NavLink href="#" class="btn btn--lg btn--primary btn--pill hero-home__cta"> Shop Now </NavLink>
+        <div class="hero-home__photos">
+            <figure>
+                <img src="img/home-hero-photo-1.png" alt=""/>
+                <figcaption>Farm fresh veggies</figcaption>
+            </figure>
+            <figure>
+                <img src="img/home-hero-photo-2.png" alt=""/>        
+                <figcaption>The freshest fruits</figcaption>
+            </figure>
+            <figure>
+                <img src="img/home-hero-photo-3.png" alt=""/>     
+                <figcaption>Make a smoothie</figcaption>
+            </figure>
         </div>
     </div>
 </div>
