--- a/styles/scss/abstracts/_variables.scss
+++ b/styles/scss/abstracts/_variables.scss
@@ -10,6 +10,9 @@ $color-secondary-medium: #ffd460;
 $color-secondary-light: #ffe293;
 $color-secondary-lighter: #fff6b5;
 
+// green accent color
+$color-accent-dark: #083f24;
+
 $color-sale: hsl(12, 71%, 51%);
 
 $color-grey-light-1: #f5f5f5;
