--- a/Server/src/Server.Web/wwwroot/css/dev/main.css
+++ b/Server/src/Server.Web/wwwroot/css/dev/main.css
@@ -1677,40 +1677,33 @@ body {
   grid-auto-rows: min-content;
   grid-column: page;
   grid-template-rows: [hero-start] 1fr [hero-end];
-  height: fit-content;
+  background-image: url("/img/home-hero-lg.svg");
+  background-size: cover;
+  min-height: 70svh;
   overflow: hidden;
 }
 .hero-home > * {
   grid-column: layout;
 }
-.hero-home__img {
-  grid-column: page;
-  grid-row: hero;
-  display: block;
-  max-height: calc(100vh - 15rem - 25rem);
-  width: 100%;
-  object-fit: cover;
-  object-position: top;
-  border-radius: 5px;
+@media only screen and (max-width: 610px) {
+  .hero-home {
+    background-image: url("/img/home-hero-sm.svg");
+  }
 }
-.hero-home__grid {
+.hero-home__layout {
   grid-row: hero;
   align-self: start;
   height: 100%;
   display: grid;
-  grid-template-columns: [full-start left-start] 1fr [left-end right-start] 1fr [right-end full-end];
-  grid-template-rows: [full-start top-start] 1fr [top-end bottom-start] 1fr [bottom-end full-end];
-}
-.hero-home__content {
-  grid-column: left;
-  grid-row: full;
-  align-self: center;
-  display: flex;
-  flex-direction: column;
-  gap: 8rem;
-  align-items: center;
+  grid-template-areas: "heading photos" "cta photos";
+  grid-template-columns: max-content 1fr;
+  grid-template-rows: repeat(2, 1fr);
+  justify-items: center;
+  row-gap: 6.4rem;
 }
 .hero-home__heading {
+  grid-area: heading;
+  align-self: end;
   font-size: 4.8rem;
   font-weight: 600;
   text-align: center;
@@ -1721,6 +1714,70 @@ body {
   .hero-home__heading {
     font-size: 3.6rem;
   }
+}
+.hero-home__cta {
+  grid-area: cta;
+  align-self: start;
+}
+.hero-home__photos {
+  grid-area: photos;
+  align-self: stretch;
+  justify-self: stretch;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(2, 1fr);
+  align-items: center;
+  justify-items: end;
+}
+.hero-home__photos figure {
+  display: grid;
+  grid-template-areas: "content";
+  position: relative;
+  border-radius: 20px;
+}
+.hero-home__photos figure::before, .hero-home__photos figure::after, .hero-home__photos figure figcaption {
+  position: absolute;
+}
+.hero-home__photos figure img {
+  grid-area: content;
+  border-radius: 20px;
+  display: block;
+  width: 100%;
+  border: 3px solid #083f24;
+  box-shadow: 2px 0 6px 4px rgba(0, 0, 0, 0.15);
+}
+.hero-home__photos figure figcaption {
+  grid-area: content;
+  align-self: end;
+  justify-self: center;
+  display: block;
+  text-transform: capitalize;
+  background-color: #083f24;
+  color: #f5f5f5;
+  padding: 0.8rem;
+  border-radius: 5px;
+  transform: translateY(50%);
+}
+.hero-home__photos figure:nth-of-type(1) {
+  grid-row: 1/2;
+  grid-column: 1/2;
+  justify-self: center;
+  z-index: 20;
+  width: 70%;
+}
+.hero-home__photos figure:nth-of-type(2) {
+  grid-column: 2/-1;
+  grid-row: 1/-1;
+  justify-self: end;
+  z-index: 10;
+  width: 80%;
+}
+.hero-home__photos figure:nth-of-type(3) {
+  grid-column: 1/2;
+  grid-row: 2/-1;
+  justify-self: end;
+  z-index: 5;
+  width: 60%;
 }
 
 .product-details {
