--- a/Server/src/Server.Web/wwwroot/css/dev/main.css
+++ b/Server/src/Server.Web/wwwroot/css/dev/main.css
@@ -1679,7 +1679,7 @@ body {
   grid-template-rows: [hero-start] 1fr [hero-end];
   background-image: url("/img/home-hero-lg.svg");
   background-size: cover;
-  min-height: 70svh;
+  height: 70svh;
   overflow: hidden;
 }
 .hero-home > * {
@@ -1693,7 +1693,7 @@ body {
 .hero-home__layout {
   grid-row: hero;
   align-self: start;
-  height: 100%;
+  height: 70svh;
   display: grid;
   grid-template-areas: "heading photos" "cta photos";
   grid-template-columns: max-content 1fr;
@@ -1724,8 +1724,8 @@ body {
   align-self: stretch;
   justify-self: stretch;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(20, 1fr);
+  grid-template-rows: repeat(10, 1fr);
   align-items: center;
   justify-items: end;
 }
@@ -1733,6 +1733,7 @@ body {
   display: grid;
   grid-template-areas: "content";
   position: relative;
+  width: 100%;
   border-radius: 20px;
 }
 .hero-home__photos figure::before, .hero-home__photos figure::after, .hero-home__photos figure figcaption {
@@ -1759,25 +1760,22 @@ body {
   transform: translateY(50%);
 }
 .hero-home__photos figure:nth-of-type(1) {
-  grid-row: 1/2;
-  grid-column: 1/2;
-  justify-self: center;
+  grid-column: 3/span 6;
+  grid-row: 2/span 3;
+  align-self: center;
   z-index: 20;
-  width: 70%;
 }
 .hero-home__photos figure:nth-of-type(2) {
-  grid-column: 2/-1;
-  grid-row: 1/-1;
-  justify-self: end;
+  grid-column: 12/span 7;
+  grid-row: 3/span 5;
+  align-self: center;
   z-index: 10;
-  width: 80%;
 }
 .hero-home__photos figure:nth-of-type(3) {
-  grid-column: 1/2;
-  grid-row: 2/-1;
-  justify-self: end;
-  z-index: 5;
-  width: 60%;
+  grid-row: 7/span 3;
+  grid-column: 7/span 4;
+  align-self: center;
+  z-index: 30;
 }
 
 .product-details {
