--- a/styles/scss/pages/_home.scss
+++ b/styles/scss/pages/_home.scss
@@ -17,7 +17,7 @@
   //background-repeat: no-repeat;
   background-size: cover;
 
-  min-height: 70svh;
+  height: 70svh;
   overflow: hidden;
 
   @include mxn.media(phone-sm) {
@@ -28,7 +28,7 @@
     grid-row: hero;
     align-self: start;
 
-    height: 100%;
+    height: 70svh;
 
     display: grid;
     grid-template-areas: "heading photos"
@@ -66,8 +66,8 @@
     justify-self: stretch;
     
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(20, 1fr);
+    grid-template-rows: repeat(10, 1fr);
     align-items: center;
     justify-items: end;
     
@@ -77,6 +77,7 @@
       
       position: relative;
       
+      width: 100%;
       border-radius: 20px;
 
       &::before, &::after, figcaption {
@@ -106,31 +107,28 @@
         border-radius: 5px;
         transform: translateY(50%);
       }
-
+      
       &:nth-of-type(1) {
-        grid-row: 1 / 2;
-        grid-column: 1 / 2;
-        justify-self: center;
+        grid-column: 3 / span 6;
+        grid-row: 2 / span 3;
+        align-self: center;
         
         z-index: 20;
-        width: 70%;
         //transform: translateX(-15px);
       }
 
       &:nth-of-type(2) {
-        grid-column: 2 / -1;
-        grid-row: 1 / -1;
-        justify-self: end;
+        grid-column: 12 / span 7;
+        grid-row: 3 / span 5;
+        align-self: center;
         z-index: 10;
-        width: 80%;
       }
 
       &:nth-of-type(3) {
-        grid-column: 1 / 2;
-        grid-row: 2 / -1;
-        justify-self: end;
-        z-index: 5;
-        width: 60%;
+        grid-row: 7 / span 3;
+        grid-column: 7 / span 4;
+        align-self: center;
+        z-index: 30;
         //transform: translateX(10px);
       }
     }
