--- a/Server/src/Server.Components/HeroSections/HeroHome.razor
+++ b/Server/src/Server.Components/HeroSections/HeroHome.razor
@@ -6,15 +6,18 @@
         <NavLink href="#" class="btn btn--lg btn--primary btn--pill hero-home__cta"> Shop Now </NavLink>
         <div class="hero-home__photos">
             <figure>
-                <img src="img/home-hero-photo-1.png" alt=""/>
+                <img src="img/home-hero-photo-1.jpg" 
+                     alt="Photo of assorted vegetables."
+                     width="600px"/>
                 <figcaption>Farm fresh veggies</figcaption>
             </figure>
             <figure>
-                <img src="img/home-hero-photo-2.png" alt=""/>        
+                <img src="img/home-hero-photo-2.jpg" alt="Photo of assorted fruits."/>
                 <figcaption>The freshest fruits</figcaption>
             </figure>
             <figure>
-                <img src="img/home-hero-photo-3.png" alt=""/>     
+                <img src="img/home-hero-photo-3.jpg"
+                     alt="Photo of three glasses containing smoothies of various flavors"/>
                 <figcaption>Make a smoothie</figcaption>
             </figure>
         </div>
