Add minified production stylesheet.

--- a/src/Server/src/Web/src/Components/App.razor
+++ b/src/Server/src/Web/src/Components/App.razor
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@inject IWebHostEnvironment Env
+
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -7,7 +9,14 @@
     <base href="/"/>
     <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800"/>
-    <link rel="stylesheet" href="css/dev/main.css"/>
+    @if (Env.IsDevelopment())
+    {
+        <link rel="stylesheet" href="css/dev/main.css"/>
+    }
+    else
+    {
+        <link rel="stylesheet" href="css/style.css" />
+    }
     <link href="Server.Web.styles.css" rel="stylesheet">
     <script src="js/components.js"></script>
     <HeadOutlet/>
