Change interactive render mode to WASM.

--- a/src/Client/src/Web/src/Components/Cart/CartControls.razor
+++ b/src/Client/src/Web/src/Components/Cart/CartControls.razor
@@ -1,6 +1,6 @@
-@inherits CartControlsBase
-@namespace SunRaysMarket.Client.Web.Components.Cart
-@rendermode InteractiveAuto
+@inherits SunRaysMarket.Client.Web.Components.Cart.CartControlsBase
+@namespace SunRaysMarket.Client.Web.Components
+@rendermode InteractiveWebAssembly
 
 <div class="@CssClasses"
      id="cartControls-@UniqueIdSuffix">
