--- a/src/Client/src/Web/src/Components/Checkout/CheckoutContent.razor
+++ b/src/Client/src/Web/src/Components/Checkout/CheckoutContent.razor
@@ -3,9 +3,10 @@
 @using SunRaysMarket.Shared.Core.DomainModels
 @using SunRaysMarket.Shared.Core.DomainModels.Checkout
 @using SunRaysMarket.Client.Application.Models
+@using SunRaysMarket.Client.Web.Components.Checkout
 @using SunRaysMarket.Client.Web.Components.Stores
 @using SunRaysMarket.Shared.Core.Checkout
-@namespace SunRaysMarket.Client.Web.Components.Checkout
+@namespace SunRaysMarket.Client.Web.Components
 @rendermode InteractiveWebAssembly
 
 <DisplayByUiState State="@_uiState">
