--- a/src/Client/src/Web/src/Components/Search/ProductSearch.razor
+++ b/src/Client/src/Web/src/Components/Search/ProductSearch.razor
@@ -1,8 +1,8 @@
 @using SunRaysMarket.Shared.Core.DomainModels.Responses
 @using Microsoft.AspNetCore.WebUtilities
 @inject NavigationManager Navigation
-@namespace SunRaysMarket.Client.Web.Components.Search
-@rendermode InteractiveAuto
+@namespace SunRaysMarket.Client.Web.Components
+@rendermode InteractiveWebAssembly
 
 <input class="search__checkbox" type="checkbox" id="search-toggle"/>
 <div class="search">
