--- a/src/Client/src/Web/src/Components/Cart/CartPageContent.razor
+++ b/src/Client/src/Web/src/Components/Cart/CartPageContent.razor
@@ -1,7 +1,7 @@
 @using SunRaysMarket.Shared.Core.Utilities
 @using SunRaysMarket.Shared.Core.DomainModels
 @using SunRaysMarket.Shared.Core.Services
-@namespace SunRaysMarket.Client.Web.Components.Cart
+@namespace SunRaysMarket.Client.Web.Components
 @rendermode InteractiveWebAssembly
 
 <DisplayByUiState State="@ComponentUiState">
