Resize hero photos for improved performance.

--- a/src/Server/src/Components/src/HeroSections/HeroHome.razor
+++ b/src/Server/src/Components/src/HeroSections/HeroHome.razor
@@ -8,16 +8,16 @@
             <figure>
                 <img src="img/home-hero-photo-1.jpg"
                      alt="Photo of assorted vegetables."
-                     width="600px"/>
+                     width="600px" height="400px"/>
                 <figcaption>Farm fresh veggies</figcaption>
             </figure>
             <figure>
-                <img src="img/home-hero-photo-2.jpg" alt="Photo of assorted fruits."/>
+                <img src="img/home-hero-photo-2.jpg" alt="Photo of assorted fruits."  width="600px" height="400px"/>
                 <figcaption>The freshest fruits</figcaption>
             </figure>
             <figure>
                 <img src="img/home-hero-photo-3.jpg"
-                     alt="Photo of three glasses containing smoothies of various flavors"/>
+                     alt="Photo of three glasses containing smoothies of various flavors"   width="600px" height="554px"/>
                 <figcaption>Make a smoothie</figcaption>
             </figure>
         </div>
