Cleanup and format code.

--- a/src/Client/src/Web/src/Components/Checkout/FulfillmentModal.razor
+++ b/src/Client/src/Web/src/Components/Checkout/FulfillmentModal.razor
@@ -1,6 +1,6 @@
 @namespace SunRaysMarket.Client.Web.Components.Checkout
 @using SunRaysMarket.Client.Application.Models
-@inherits SunRaysMarket.Client.Web.Components.Modals.ModalContentBase<SunRaysMarket.Shared.Core.DomainModels.AddressModel>
+@inherits ModalContentBase<SunRaysMarket.Shared.Core.DomainModels.AddressModel>
 @rendermode @(new InteractiveWebAssemblyRenderMode(false))
 
 @if (TabsComponentShouldLoad)
