--- a/src/Client/src/Web/src/Components/Checkout/AddressEntryModalContent.razor
+++ b/src/Client/src/Web/src/Components/Checkout/AddressEntryModalContent.razor
@@ -1,8 +1,7 @@
 @namespace SunRaysMarket.Client.Web.Components.Checkout
 @using SunRaysMarket.Shared.Core.Services
 @using SunRaysMarket.Shared.Core.DomainModels
-@using SunRaysMarket.Client.Web.Components.Modals
-@inherits SunRaysMarket.Client.Web.Components.Modals.ModalContentBase<CreateAddressModel>
+@inherits ModalContentBase<CreateAddressModel>
 
 @rendermode @(new InteractiveWebAssemblyRenderMode(false))
 
